admin_bootstrap_test_output8.txt
============================= test session starts =============================
platform win32 -- Python 3.13.3, pytest-9.0.1, pluggy-1.6.0 -- C:\Users\Vasilis\AppData\Local\Programs\Python\Python313\python.exe
cachedir: .pytest_cache
rootdir: D:\SMS\student-management-system
plugins: anyio-4.11.0, Faker-38.2.0, langsmith-0.4.30, locust-2.42.6, cov-7.0.0
collecting ... collected 0 items / 1 error

=================================== ERRORS ====================================
___________ ERROR collecting backend/tests/test_admin_bootstrap.py ____________
C:\Users\Vasilis\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\Vasilis\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\Vasilis\AppData\Local\Programs\Python\Python313\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\Vasilis\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\assertion\rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\Users\Vasilis\AppData\Local\Programs\Python\Python313\Lib\site-packages\_pytest\assertion\rewrite.py:359: in _rewrite_test
    co = compile(tree, strfn, "exec", dont_inherit=True)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E     File "D:\SMS\student-management-system\backend\tests\test_admin_bootstrap.py", line 2
E       from __future__ import annotations
E       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
E   SyntaxError: from __future__ imports must occur at the beginning of the file
------------------------------- Captured stdout -------------------------------
[pytest] Removed backend\__pycache__
[pytest] Removed backend\tests\__pycache__
[pytest] Test environment prepared.
------------------------------- Captured stderr -------------------------------
2025-12-20 10:58:00,543 - backend.logging_config - INFO - [-] - Logging initialized
2025-12-20 10:58:00,544 - backend.security.csrf - INFO - [-] - CSRF protection disabled via settings; skipping installation
2025-12-20 10:58:00,551 - backend.router_registry - INFO - [-] - Admin router registered successfully
2025-12-20 10:58:00,561 - backend.router_registry - INFO - [-] - Auth router registered successfully
2025-12-20 10:58:01,067 - backend.router_registry - INFO - [-] - Registered routers: Students, Admin, Courses, Grades, Attendance, Analytics, DailyPerformance, Export, Enrollments, Imports, Highlights, AdminOps, Sessions, Diagnostics, Reports, Jobs, Audit, RBAC, Feedback, Control
2025-12-20 10:58:01,070 - backend.app_factory - WARNING - [-] - Prometheus metrics setup failed: No module named 'prometheus_client'
2025-12-20 10:58:01,071 - backend.app_factory - WARNING - [-] - Failed to register /metrics endpoint: No module named 'prometheus_client'
2025-12-20 10:58:01,071 - backend.app_factory - INFO - [-] - FastAPI application created successfully (version=1.12.5)
=========================== short test summary info ===========================
ERROR backend/tests/test_admin_bootstrap.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.60s ===============================
